@@ -2157,4 +2157,44 @@ Since: 2.4
 </return>
 </function>
 
+<function name="gtk_widget_render_icon">
+<description>
+A convenience function that uses the theme engine and RC file
+settings for the widget to look up @stock_id and render it to
+a pixbuf. @stock_id should be a stock icon ID such as
+#GTK_STOCK_OPEN or #GTK_STOCK_OK. @size should be a size
+such as #GTK_ICON_SIZE_MENU. @detail should be a string that
+identifies the widget or code doing the rendering, so that
+theme engines can special-case rendering for that widget or code.
+
+The pixels in the returned #GdkPixbuf are shared with the rest of
+the application and should not be modified. The pixbuf should be freed
+after use with g_object_unref().
+
+
+</description>
+<parameters>
+<parameter name="widget">
+<parameter_description> a #GtkWidget
+</parameter_description>
+</parameter>
+<parameter name="stock_id">
+<parameter_description> a stock ID
+</parameter_description>
+</parameter>
+<parameter name="size">
+<parameter_description> a stock size. A size of (GtkIconSize)-1 means render at 
+the size of the source and don&apos;t scale (if there are multiple 
+source sizes, GTK+ picks one of the available sizes).
+</parameter_description>
+</parameter>
+<parameter name="detail">
+<parameter_description> render detail to pass to theme engine
+</parameter_description>
+</parameter>
+</parameters>
+<return> a new pixbuf if the stock ID was known.
+</return>
+</function>
+
 </root>
