@@ -1,3 +1,8 @@
+2006-03-28  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/gtk_docs_override.xml: Added override for 
+	gtk_widget_render_icon(), because it mentioned unrefing the result.
+
 2006-03-26  Murray Cumming  <murrayc@murrayc.com>
 
 	* gdk/src/gdk_docs_override.xml: Override the documentation for 
